.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconchgdist__c.object
<CustomObject>
    <description>soconchgdist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconchgdist_soconchg__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soconchgdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconchgdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconchgdist_amount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconchgdist_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconchgdist_pct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconchgdist_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Misc Charge Acct Distribution</relationshipLabel>
        <relationshipName>soconchgdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconchgdist_soconchg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Miscellaneous Charge</label>
        <referenceTo>rstk__soconchg__c</referenceTo>
        <relationshipLabel>Sales Account Distribution</relationshipLabel>
        <relationshipName>soconchgdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Misc Charge Acct Distribution</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Misc Charge Account Distributio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Misc Charge Acct Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Amount</fullName>
        <active>true</active>
        <description>Amount cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK(rstk__soconchgdist_amount__c) &amp;&amp; rstk__soconchgdist_amount__c&lt; 0</errorConditionFormula>
        <errorMessage>Amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Amount_Percentage</fullName>
        <active>true</active>
        <description>The Amount and Percentage fields are related – one or the other or both must be specified.</description>
        <errorConditionFormula>ISBLANK( rstk__soconchgdist_amount__c) &amp;&amp; ISBLANK( rstk__soconchgdist_pct__c)</errorConditionFormula>
        <errorMessage>The Amount and Percentage fields are related – one or the other or both must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Percentage</fullName>
        <active>true</active>
        <description>Percentage cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK( rstk__soconchgdist_pct__c) &amp;&amp; rstk__soconchgdist_pct__c&lt; 0</errorConditionFormula>
        <errorMessage>Percentage cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Account</fullName>
        <active>true</active>
        <description>Sales Account is Required and not modifiable and should belong to Product Division.</description>
        <errorConditionFormula>ISBLANK(rstk__soconchgdist_salesacct__c) || (! ISNEW() &amp;&amp; ISCHANGED(rstk__soconchgdist_salesacct__c) )|| ( rstk__soconchgdist_salesacct__r.rstk__syacc_div__c &lt;&gt; rstk__soconchgdist_soconchg__r.rstk__soconchg_soprod__r.rstk__soprod_div__c) ||( TEXT(rstk__soconchgdist_salesacct__r.rstk__syacc_gltype_pl__c) &lt;&gt; &apos;Revenue&apos; )</errorConditionFormula>
        <errorMessage>Sales Account is Required and not modifiable and should belong to Product Division.</errorMessage>
    </validationRules>
</CustomObject>